[package]
name = "sci-lisp"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = ""
repository = "https://github.com/chaploud/sci-lisp"
documentation = ""
description = "A Lisp for Scientific Computation written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
pest = "2.7.5"
pest_derive = "2.7.5"
regex = "1.10.2"

[[bin]]
name = "scilisp"
path = "src/main.rs"
