[package]
name = "sci-lisp"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = ""
repository = "https://github.com/chaploud/sci-lisp"
documentation = ""
description = "A Lisp for Scientific Computation written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
dyn-clone = "1.0.16"
indexmap = "2.1.0"
pest = "2.7.5"
pest_derive = "2.7.5"
regex = "1.10.2"
rustyline = "13.0.0"
rustyline-derive = "0.10.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[[bin]]
name = "scilisp"
path = "src/main.rs"
