[package]
name = "sci-lisp"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = ""
repository = "https://github.com/chaploud/sci-lisp"
documentation = ""
description = "A Lisp for Scientific Computation written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
dyn-clone = "1.0.16"
fxhash = "0.2.1"
heck = "0.4.1"
indexmap = "2.1.0"
nohash = "0.2.0"
once_cell = "1.19.0"
pest = "2.7.5"
pest_derive = "2.7.5"
rand = "0.8.5"
regex = "1.10.2"
rustyline = "13.0.0"
rustyline-derive = "0.10.0"
unescape = "0.1.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
criterion = { version = "0.5.1", features = ["html_reports"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
  "run-cargo-fmt",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-test",
  "precommit-hook",
  "prepush-hook",
  "postmerge-hook",
]

[[bin]]
name = "scilisp"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
